k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-ui
  namespace: app-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pi-ui
  template:
    metadata:
      labels:
        app: pi-ui
    spec:
      containers:
        - name: pi-ui
          image: erickhdez1997/pi-ui:latest
          ports:
            - containerPort: 80
