k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-ui-prod
  namespace: app-prod
  labels:
    name: pi-ui-prod
spec:
  selector:
    app: pi-ui-prod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
