k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-ui-ingress
  namespace: app-prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: mypi.duckdns.org  # Change to your DuckDNS domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pi-ui
            port:
              number: 80
  tls:
  - hosts:
    - ehpi.duckdns.org
    secretName: pi-ui-tls
